# c-_5sem

./: README.md
task_1/: CMakeLists.txt  main.cpp  string.cpp  string.h
task_2/: CMakeLists.txt  main.cpp
